# FUSTr_SW

./: Clean_Fastas.md  Dockerfile  Dockerfile_old  README.md  ReadMe.md  ReadMe_2024.md  configure.json  configure_silix08.json  setup_docker.sh  setup_dockerV2.sh
.Rproj.user/6B5B6EA5/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/6B5B6EA5/sources/prop/: INDEX
.Rproj.user/shared/notebooks/: paths
silix-1.2.11/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
silix-1.2.11/doc/: Makefile  Makefile.am  Makefile.in
silix-1.2.11/doc/man/: Makefile  Makefile.am  Makefile.in  silix.1a  silix.1b  silixx.1
silix-1.2.11/libbuildfam/: BlastAnalyzer.cc  BlastAnalyzer.h  BlastAnalyzer.lo  DBSequence.cc  DBSequence.h  DBSequence.lo  FamBlast.cc  FamBlast.h  FamBlast.lo  MPIFamBlast.h  Makefile  Makefile.am  Makefile.in  libbuildfam.la
silix-1.2.11/libbuildfam/.deps/: BlastAnalyzer.Plo  DBSequence.Plo  FamBlast.Plo
silix-1.2.11/libbuildfam/.libs/: libbuildfam.la
silix-1.2.11/libforest/: Converter.h  EdgeWeightedForest.h  FamXadj.h  Forest.cc  Forest.h  Forest.lo  ForestI.h  Makefile  Makefile.am  Makefile.in  SpanningStarForest.cc  SpanningStarForest.h  SpanningStarForest.lo  libforest.la
silix-1.2.11/libforest/.deps/: Forest.Plo  SpanningStarForest.Plo
silix-1.2.11/libforest/.libs/: libforest.la
silix-1.2.11/src/: Makefile  Makefile.am  Makefile.in  main_buildfam.cc  main_buildfamx.cc  silix  silixx
silix-1.2.11/src/.deps/: main_buildfam.Po  main_buildfamx.Po
silix-1.2.11/unittests/: BlastAnalyzerTest.cc  DBSequenceTest.cc  FamBlastTest.cc  FamXadjTest.cc  ForestTest.cc  Makefile  Makefile.am  Makefile.in
silix-1.2.11/utils/: Makefile  Makefile.am  Makefile.in  bfnet.cc  bfsize.cc  bfsplit.cc  bfstat.cc  infoseq  infoseq.cc  silix-fnet  silix-fsize  silix-fstat  silix-split  sizeFastaSet.pl
silix-1.2.11/utils/.deps/: bfnet.Po  bfsize.Po  bfsplit.Po  bfstat.Po  infoseq.Po
