AUTOMAKE_OPTIONS = gnu
SUBDIRS = libforest libbuildfam src utils unittests doc
EXTRA_DIST = unittests/data/bfamtest_100-1-2.dat unittests/data/bfamtest2-1.dat unittests/data/dbseqtest_part.dat unittests/data/sequences10.dat \
	unittests/data/bfamtest_100-1.dat unittests/data/bfamtest2-2.dat unittests/data/dbseqtest_seq.dat \
	unittests/data/bfamtest_100-2.dat unittests/data/bfamtest3-1.dat unittests/data/famblastest_blast.dat \
	unittests/data/bfamtest_200.dat unittests/data/bfamtest3-2.dat unittests/data/sequences10_blastout.dat \
	utils/sizeFastaSet.pl
CLEANFILES = *~
